--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -139,7 +139,7 @@
     <div class="register-content">
         <div class="logo-section">
             <div class="logo-container">
-                <img src="{% static 'images/logobesar.png' %}" alt="Nyarap at Depok Logo">
+                <img src="{% static 'images/logo_besar.png' %}" alt="Nyarap at Depok Logo">
             </div>
             <h1 class="app-title">Nyarap at Depok</h1>
         </div>
