--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,7 +7,7 @@
     </div>
     
     <!-- Title Section -->
-    <div style="text-align: center; color: #323942; font-size: 20px; font-family: Montserrat, sans-serif; font-weight: 700; margin-bottom: 10px;">
+    <div style="text-align: center; color: #323942; font-size: 20px; font-family:Poppins sans-serif; font-weight: 700; margin-bottom: 10px;">
         Nyarap @Depok
     </div>
     
